feat(entity-dynamic-mapping)!: update swagger.yaml
Signed-off-by: foukou19 <ferial.oukoukas@decathlon.com>